feat: second coupon

--- a/promotion/coupons/index.html
+++ b/promotion/coupons/index.html
@@ -61,6 +61,87 @@
       </div>
     </div>
   </div>
+  <br>
+  <div id="card">
+    <div id="header">
+      <br>
+      <div id="card-inside">
+        <p class="address" style="  display: flex; justify-content: space-between;">
+          <img src="./img/map-marker-icon.svg" style="margin-left: 30px; padding: 0; height: 30px; width: auto;">
+          <img src="./img/twitter-icon.svg" style=" padding: 0; height: 30px; width: auto;">
+          <img src="./img/phone-icon.svg" style="margin-right: 30px; padding: 0; height: 30px; width: auto;">
+        </p>
+      </div>
+
+      <div class="container">
+        <img src="./img/alcohol.jpg" style="max-width:375px; padding: 0; margin: 0; display:block; margin:auto;"/>
+        <div class="bottom-left"><h1>Happy Hour</h1></div>
+      </div>
+      <style>
+        @import url(https://fonts.googleapis.com/css?family=Lalezar);
+
+        p {
+          font-family: 'Maven Pro';
+          text-align:center;
+        }
+
+        h1 {
+          font-family: 'Lalezar';
+        }
+
+        #card {
+          height: 667px;
+          width: 375px;
+          border-radius: 2px;
+          box-shadow: 0px 2px 7px rgba(0, 0, 0, .6);
+          background: rgba(0, 0, 230, .15);
+        }
+
+        #card-inside {
+          height: 75px;
+          width: 375px;
+        }
+
+        #header {
+          height: 100%;
+          width: 100%;
+        }
+
+        #header img {
+          max-height:100%;
+          max-width:80%;
+          position:relative;
+          display:inline;
+          margin: 10px auto;
+        }
+
+        .container {
+          position: relative;
+          text-align: center;
+          font-size: 1.75em;
+          color: #FFEC00;
+        }
+
+        .bottom-left {
+          position: absolute;
+          top: -20px;
+          left: 60px;
+        }
+
+        .address {
+          display:inline-block;
+          margin: 25px 0px 0px 7px;
+          padding:10px;
+        }
+      </style>
+     <div>
+
+      <p style="margin: 10px 10px;">Special offer on tentive site for a buy 1 get another for <b>50% off</b>.</p>
+
+      <img style="max-width:100px; display:block; margin:auto;" src="./img/qr-icon.svg"/><br>
+      </div>
+    </div>
+  </div>
 </body>
 <footer>
   <div style="font-size: 9px;">Icons made by <a href="https://www.flaticon.com/authors/vectorgraphit" title="Vectorgraphit">Vectorgraphit</a> and <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
