--- a/promotion/icons/icons.html
+++ b/promotion/icons/icons.html
@@ -4,6 +4,7 @@
   <title>Icons Showcase</title>
 </head>
 <body>
+  <img src="./logo.svg" style="max-width: 200px;"/><br>
   <img src="./bar.svg" style="max-width: 80px;"/><br>
   <img src="./grocery.svg" style="max-width: 80px;"/><br>
   <img src="./cafe.svg" style="max-width: 80px;"/>
