design; add grocery svg

--- a/promotion/icons/icons.html
+++ b/promotion/icons/icons.html
@@ -3,10 +3,11 @@
 <head>
   <title>Icons Showcase</title>
 </head>
-<body>
+<body style="background-color: rgba(102, 153, 153, .5);">
   <img src="./logo.svg" style="max-width: 200px;"/><br>
   <img src="./bar.svg" style="max-width: 80px;"/><br>
   <img src="./grocery.svg" style="max-width: 80px;"/><br>
-  <img src="./cafe.svg" style="max-width: 80px;"/>
+  <img src="./cafe.svg" style="max-width: 80px;"/><br>
+  <img src="./dining.svg" style="max-width: 80px;"/>
 </body>
 </html>
