--- a/promotion/coupons/index.html
+++ b/promotion/coupons/index.html
@@ -75,7 +75,7 @@
 
       <div class="container">
         <img src="./img/alcohol.jpg" style="max-width:375px; padding: 0; margin: 0; display:block; margin:auto;"/>
-        <div class="bottom-left"><h1>Happy Hour</h1></div>
+        <div class="bottom-left"><h1><mark>Happy Hour</mark></h1></div>
       </div>
       <style>
         @import url(https://fonts.googleapis.com/css?family=Lalezar);
@@ -87,6 +87,53 @@
 
         h1 {
           font-family: 'Lalezar';
+        }
+
+        #wrapper {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
+        .button {
+          display: inline-block;
+          border-radius: .5em;
+          background-color: #E80000;
+          border: 3px solid #FF6633;
+          color: #FFFFFF;
+          text-align: center;
+          font-size: 28px;
+          padding: 10px;
+          width: 170px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+        }
+
+        .button span {
+          cursor: pointer;
+          display: inline-block;
+          position: relative;
+          transition: 0.5s;
+        }
+
+        .button span:after {
+          content: '\00bb';
+          position: absolute;
+          opacity: 0;
+          top: 0;
+          right: -20px;
+          transition: 0.5s;
+        }
+
+        .button:hover span {
+          padding-right: 25px;
+        }
+
+        .button:hover span:after {
+          opacity: 1;
+          right: 0;
         }
 
         #card {
@@ -119,7 +166,14 @@
           position: relative;
           text-align: center;
           font-size: 1.75em;
-          color: #FFEC00;
+          color: #f00000;
+        }
+
+        mark {
+          background-color: #000;
+          color: #f00000;
+          padding: 0;
+          margin: 0;
         }
 
         .bottom-left {
@@ -134,11 +188,12 @@
           padding:10px;
         }
       </style>
-     <div>
+       <div>
 
-      <p style="margin: 10px 10px;">Special offer on tentive site for a buy 1 get another for <b>50% off</b>.</p>
-
-      <img style="max-width:100px; display:block; margin:auto;" src="./img/qr-icon.svg"/><br>
+        <p style="margin: 10px 10px;">Special offer on tentive site for a buy 1 get another for <b>50% off</b>.</p>
+        <div id="wrapper">
+          <button class="button" style="vertical-align:middle"><span>REDEEM </span></button>
+        </div>
       </div>
     </div>
   </div>
