design: add additional icons

--- a/promotion/icons/icons.html
+++ b/promotion/icons/icons.html
@@ -4,10 +4,34 @@
   <title>Icons Showcase</title>
 </head>
 <body style="background-color: rgba(102, 153, 153, .5);">
-  <img src="./logo.svg" style="max-width: 200px;"/><br>
-  <img src="./bar.svg" style="max-width: 80px;"/><br>
-  <img src="./grocery.svg" style="max-width: 80px;"/><br>
-  <img src="./cafe.svg" style="max-width: 80px;"/><br>
-  <img src="./dining.svg" style="max-width: 80px;"/>
+  <div style="background-color: #fff">
+    <img src="./logo.svg" style="max-width: 200px;"/><br>
+    <img src="./bar.svg" style="max-width: 50px;"/><br>
+    <img src="./grocery.svg" style="max-width: 50px;"/><br>
+    <img src="./cafe.svg" style="max-width: 50px;"/><br>
+    <img src="./dining.svg" style="max-width: 50px;"/><br>
+    <img src="./beauty.svg" style="max-width: 50px;"/><br>
+    <img src="./shopping.svg" style="max-width: 50px;"/><br>
+    <img src="./medical.svg" style="max-width: 50px;"/><br>
+    <img src="./auto.svg" style="max-width: 50px;"/><br>
+  </div>
 </body>
 </html>
+
+<!-- var_dump() : check whether var is a string, boolean, int or float-->
+<!-- double quotes to echo a variable, single will just relay the $var -->
+<!-- include; is the import function of PHP -->
+<!-- <> is a less than or greater than operator -->
+<!-- !$var looks for whether var is false, either through the boolean operator or 0 -->
+<!-- $var = true && false < would turn out to be false, as if the booleons had a parenthesis around them -->
+<!-- $var = true and false < would not have parenthesis and would look at the true first, therefor true  -->
+<!-- implode() to show items in array0 -->
+<!-- unshift, shift, push, pop, array_values(unset(arr[1], arr[3])) < unset deletes specified item, array values reorders indexes -->
+<!--
+arr[] = array(
+  'midi' => 'red',
+  'marin' => 'blue',
+  'mem' => 'green'
+);
+-->
+<!-- sort(), rsort(), shuffle() -->
