design: website branding and references

--- a/promotion/icons/icons.html
+++ b/promotion/icons/icons.html
@@ -3,9 +3,21 @@
 <head>
   <title>Icons Showcase</title>
 </head>
+<img src="./jazzb.svg" style="max-width: 300px;"/>
+<img src="./jazzb.png" style="max-width: 300px;"/><br>
 <body style="background-color: rgba(102, 153, 153, .5);">
   <div style="background-color: #fff">
+    <p>Covert files using <a href="http://pngtosvg.com">pngtosvg</a></p>
+    <p><a href="https://www.cloudways.com/blog/the-basics-of-file-upload-in-php/">Create Image And File Upload In PHP w/ JQuery & AJAX</a></p>
+    <p><a href="https://pre00.deviantart.net/e711/th/pre/f/2013/179/2/c/ios_7_icons__updated__by_iynque-d69mme1.png">iOS icons examples</a></p>
     <img src="./logo.svg" style="max-width: 200px;"/><br>
+    <img src="./magnet-example.png" style="max-width: 400px;"/><br>
+    <img src="./icon-logo.svg" style="max-width: 200px;"/> <img src="./icon-logo.svg" style="max-width: 80px; border-radius: 10px;"/><br>
+    <img src="./logo2.svg" style="max-width: 200px;"/> <img src="./logo2.svg" style="max-width: 80px; border-radius: 10px;"/><br>
+    <img src="./logo3.svg" style="max-width: 200px;"/> <img src="./logo3.svg" style="max-width: 80px; border-radius: 10px;"/><br>
+    <img src="./logo4.svg" style="max-width: 200px;"/> <img src="./logo4.svg" style="max-width: 80px; border-radius: 10px;"/><br>
+    <img src="./logo5.svg" style="max-width: 200px;"/> <img src="./logo5.svg" style="max-width: 80px; border-radius: 10px;"/><br>
+    <img src="./logo6.svg" style="max-width: 300px;"/><br>
     <img src="./bar.svg" style="max-width: 50px;"/><br>
     <img src="./grocery.svg" style="max-width: 50px;"/><br>
     <img src="./cafe.svg" style="max-width: 50px;"/><br>
@@ -14,6 +26,12 @@
     <img src="./shopping.svg" style="max-width: 50px;"/><br>
     <img src="./medical.svg" style="max-width: 50px;"/><br>
     <img src="./auto.svg" style="max-width: 50px;"/><br>
+    <img src="https://thumb1.shutterstock.com/display_pic_with_logo/484582/167718563/stock-photo-five-cocktails-on-the-bar-counter-167718563.jpg" style="max-width: 400px;"/><br>
+    <p><a href="https://www.shutterstock.com/image-photo/five-cocktails-on-bar-counter-167718563?src=5YLmSLZxjN0dx4HWmlwMJA-1-17">bar pic</a></p>
+    <img src="https://image.shutterstock.com/z/stock-photo-easter-shopping-grocery-cart-at-a-colorful-supermarket-filled-up-with-food-products-as-seen-from-515271361.jpg" style="max-width: 400px;"/><br>
+    <p><a href="https://www.shutterstock.com/image-photo/easter-shopping-grocery-cart-colorful-supermarket-515271361?src=cE4HCMBEEWDyCa1K7Bbjrg-2-4">grocery pic</a></p>
+    <img src="https://image.shutterstock.com/z/stock-photo-romantic-dinner-setup-red-decoration-with-candle-light-in-a-restaurant-selective-focus-316455128.jpg" style="max-width: 400px;"/><br>
+    <p><a href="https://www.shutterstock.com/image-photo/romantic-dinner-setup-red-decoration-candle-316455128?src=V6_smioxMwkQel2gIPjGTw-2-99">dining pic</a></p>
   </div>
 </body>
 </html>
