--- a/promotion/coupons/index.html
+++ b/promotion/coupons/index.html
@@ -2,203 +2,152 @@
 <html>
 <head>
   <title>Promotion</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/jquery-3.3.1.js"></script>
+  <script>
+    $(document).ready(function(){
+        $("#toggle").click(function(){
+            $("#hide0").toggle();
+            $("#hide1").toggle();
+            $("#hide2").toggle();
+            $("#hide3").toggle();
+            $("#hide4").toggle();
+            $("#hide5").toggle();
+        });
+    });
+  </script>
 </head>
 <body>
-  <div id="card">
-    <div id="header">
-      <br>
-      <img src="./img/twitter-logo.svg" style="max-width:200px; display:block; margin:auto;"/>
-      <style>
-        @import url(https://fonts.googleapis.com/css?family=Maven+Pro);
+  <div class="row">
+    <div class="column" style="background-color:#aaa;">
+      <button id='toggle'>Preview / Edit</button>
 
-        p {
-          font-family: 'Maven Pro';
-          text-align:center;
-        }
-
-        #card {
-          height: 667px;
-          width: 375px;
-          border-radius: 2px;
-          box-shadow: 0px 2px 7px rgba(0, 0, 0, .6);
-          background: rgba(0, 0, 230, .15);
-        }
-
-        #header {
-          height: 100%;
-          width: 100%;
-        }
-
-        #header img {
-          max-height:100%;
-          max-width:80%;
-          position:relative;
-          display:inline;
-          margin: 10px auto;
-        }
-
-        .address {
-          display:inline-block;
-          margin: 25px 0px 0px 7px;
-          padding:10px;
-        }
-      </style>
-     <div>
-
-       <p class="address" style=" display:block; margin:auto;">
-         <img src="./img/map-marker-icon.svg" style="margin: 0; padding: 0; height: 15px; width: auto;">
-         Insert_here St., City, State, Zip_Code
-       </p>
-
-       <p class="address" style=" display:block; margin:auto;">
-         <img src="./img/phone-icon.svg" style="margin: 0; padding: 0; height: 15px; width: auto;">
-         (555) 555-5555
-       </p>
-
-      <p style="margin: 10px 10px;">Special offer on tentive site for a buy 1 get another for <b>50% off</b>.</p>
-
-      <img style="max-width:100px;display:block; margin:auto;" src="./img/qr-icon.svg"/><br>
-      </div>
     </div>
-  </div>
-  <br>
-  <div id="card">
-    <div id="header">
-      <br>
-      <div id="card-inside">
-        <p class="address" style="  display: flex; justify-content: space-between;">
-          <img src="./img/map-marker-icon.svg" style="margin-left: 30px; padding: 0; height: 30px; width: auto;">
-          <img src="./img/twitter-icon.svg" style=" padding: 0; height: 30px; width: auto;">
-          <img src="./img/phone-icon.svg" style="margin-right: 30px; padding: 0; height: 30px; width: auto;">
-        </p>
-      </div>
+    <div class="column" style="background-color:#bbb;">
+      <div id="card">
+        <div id="header">
+          <br>
+          <div id="card-inside">
+            <p class="address" style="  display: flex; justify-content: space-between;">
+              <img src="./img/map-marker-icon.svg" style="margin-left: 30px; padding: 0; height: 30px; width: auto;">
+              <img src="./img/twitter-icon.svg" style=" padding: 0; height: 30px; width: auto;">
+              <img src="./img/phone-icon.svg" style="margin-right: 30px; padding: 0; height: 30px; width: auto;">
+            </p>
+          </div>
+          <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
-      <div class="container">
-        <img src="./img/alcohol.jpg" style="max-width:375px; padding: 0; margin: 0; display:block; margin:auto;"/>
-        <div class="bottom-left"><h1><mark>Happy Hour</mark></h1></div>
-      </div>
-      <style>
-        @import url(https://fonts.googleapis.com/css?family=Lalezar);
+          <div id="logo-upload">
+            <div v-if="!image">
+              <input id="hide0" type="file" @change="onFileChange">
 
-        p {
-          font-family: 'Maven Pro';
-          text-align:center;
-        }
+              <div class="container">
+                <img src="./img/temp-company-logo.svg" style="max-width:200px; display:block; margin:auto;"/>
+              </div>
 
-        h1 {
-          font-family: 'Lalezar';
-        }
+            <br>
 
-        #wrapper {
-          width: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
+            </div>
+            <div v-else>
+              <button id="hide1" @click="removeImage">Remove image</button>
+              <img :src="image" style="max-width:200px; display:block; margin:auto;"/>
+            </div>
+          </div>
 
-        .button {
-          display: inline-block;
-          border-radius: .5em;
-          background-color: #E80000;
-          border: 3px solid #FF6633;
-          color: #FFFFFF;
-          text-align: center;
-          font-size: 28px;
-          padding: 10px;
-          width: 170px;
-          transition: all 0.5s;
-          cursor: pointer;
-          margin: 5px;
-        }
+          <div id="image-upload">
+            <div v-if="!image">
+              <input id="hide2" type="file" @change="onFileChange">
 
-        .button span {
-          cursor: pointer;
-          display: inline-block;
-          position: relative;
-          transition: 0.5s;
-        }
+              <div class="container">
+                <img src="./img/alcohol.jpg" style="max-width:375px; padding: 0; margin: 0; display:block; margin:auto;"/>
+              </div>
 
-        .button span:after {
-          content: '\00bb';
-          position: absolute;
-          opacity: 0;
-          top: 0;
-          right: -20px;
-          transition: 0.5s;
-        }
+            </div>
+            <div v-else>
+              <button id="hide3" @click="removeImage">Remove image</button>
+              <img :src="image" style="max-width:375px; padding: 0; margin: 0; display:block; margin:auto;"/>
 
-        .button:hover span {
-          padding-right: 25px;
-        }
+            </div>
+          </div>
+           <div>
+             <div id="text-insert">
+               <b id="hide4" >Change text below:</b> <input id="hide5" type="text" v-model.text="promotion">
+              <p style="margin: 10px 10px;">{{ promotion }}</p>
+              <div id="wrapper">
+                <button class="button" style="vertical-align:middle"><span>REDEEM </span></button>
+              </div>
+            </div>
+          </div>
+          <script>
+            new Vue({
+              el: '#text-insert',
+              data: {
+                name: '',
+                promotion: 'Special offer at restaurant for a buy 1 get another for insert text 50% off.'
+              }
+            });
 
-        .button:hover span:after {
-          opacity: 1;
-          right: 0;
-        }
+            new Vue({
+              el: '#logo-upload',
+              data: {
+                image: ''
+              },
+              methods: {
+                onFileChange(e) {
+                  var files = e.target.files || e.dataTransfer.files;
+                  if (!files.length)
+                    return;
+                  this.createImage(files[0]);
+                },
+                createImage(file) {
+                  var image = new Image();
+                  var reader = new FileReader();
+                  var vm = this;
 
-        #card {
-          height: 667px;
-          width: 375px;
-          border-radius: 2px;
-          box-shadow: 0px 2px 7px rgba(0, 0, 0, .6);
-          background: rgba(0, 0, 230, .15);
-        }
+                  reader.onload = (e) => {
+                    vm.image = e.target.result;
+                  };
+                  reader.readAsDataURL(file);
+                },
+                removeImage: function (e) {
+                  this.image = '';
+                }
+              }
+            })
 
-        #card-inside {
-          height: 75px;
-          width: 375px;
-        }
+            new Vue({
+              el: '#image-upload',
+              data: {
+                image: ''
+              },
+              methods: {
+                onFileChange(e) {
+                  var files = e.target.files || e.dataTransfer.files;
+                  if (!files.length)
+                    return;
+                  this.createImage(files[0]);
+                },
+                createImage(file) {
+                  var image = new Image();
+                  var reader = new FileReader();
+                  var vm = this;
 
-        #header {
-          height: 100%;
-          width: 100%;
-        }
+                  reader.onload = (e) => {
+                    vm.image = e.target.result;
+                  };
+                  reader.readAsDataURL(file);
+                },
+                removeImage: function (e) {
+                  this.image = '';
+                }
+              }
+            })
+          </script>
 
-        #header img {
-          max-height:100%;
-          max-width:80%;
-          position:relative;
-          display:inline;
-          margin: 10px auto;
-        }
-
-        .container {
-          position: relative;
-          text-align: center;
-          font-size: 1.75em;
-          color: #f00000;
-        }
-
-        mark {
-          background-color: #000;
-          color: #f00000;
-          padding: 0;
-          margin: 0;
-        }
-
-        .bottom-left {
-          position: absolute;
-          top: -20px;
-          left: 60px;
-        }
-
-        .address {
-          display:inline-block;
-          margin: 25px 0px 0px 7px;
-          padding:10px;
-        }
-      </style>
-       <div>
-
-        <p style="margin: 10px 10px;">Special offer on tentive site for a buy 1 get another for <b>50% off</b>.</p>
-        <div id="wrapper">
-          <button class="button" style="vertical-align:middle"><span>REDEEM </span></button>
         </div>
       </div>
     </div>
   </div>
 </body>
 <footer>
-  <div style="font-size: 9px;">Icons made by <a href="https://www.flaticon.com/authors/vectorgraphit" title="Vectorgraphit">Vectorgraphit</a> and <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </footer>
 </html>
