--- a/Web2Picture/HTML2Canvas/index.html
+++ b/Web2Picture/HTML2Canvas/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <script src="./js/html2canvas.js"></script>
+  <script src="./js/html2canvas.min.js"></script>
+</head>
+<body>
+  <div id="capture" style="border: 10px solid black; width: 200px;">
+    <h4 style="color: #000; text-align: center;">Headliner Text Goes Here</h4>
+  </div>
 
+  <br>
+
+  <span id="img"></span>
+</body>
+<script>
+  html2canvas(document.querySelector("#capture")).then(canvas => {
+    var thisimage = document.getElementById("img");
+    thisimage.appendChild(canvas)
+  });
+</script>
+</html>
