--- a/checkmark/checkmark.html
+++ b/checkmark/checkmark.html
@@ -59,6 +59,13 @@
     border: 3px solid black;
     width: 12px;
     height: 12px;
+    border-radius: 2px;
+  }
+
+  .input-img-checked {
+    border: 1px solid #02c79b;
+    width: 15px;
+    height: 15px;
   }
 </style>
 Button image style:
@@ -88,9 +95,9 @@ Button image style:
 Input image style:
 
 <br><br>
-<input type="image" src="./none-squared.png" alt="Submit" class="input-img-none">
+<input type="image" src="./none-squared.svg" alt="Submit" class="input-img-none">
 5
 
 <br><br>
-<input type="image" src="./checkmark-squared.png" alt="Submit" class="input-img-checked">
+<input type="image" src="./checkmark-squared.svg" alt="Submit" class="input-img-checked">
 6
