--- a/checkmark/checkmark.html
+++ b/checkmark/checkmark.html
@@ -67,6 +67,25 @@
     width: 15px;
     height: 15px;
   }
+
+  .circle-nofill {
+    margin: 0;
+    padding: 0;
+    border: 3px solid #000;
+    width: 15px;
+    height: 15px;
+    border-radius: 100px;
+  }
+
+  .circle-fill {
+    margin: 0;
+    padding: 0;
+    border: 3px solid #000;
+    width: 15px;
+    height: 15px;
+    border-radius: 100px;
+    background-color: #000;
+  }
 </style>
 Button image style:
 
@@ -101,3 +120,14 @@ Input image style:
 <br><br>
 <input type="image" src="./checkmark-squared.svg" alt="Submit" class="input-img-checked">
 6
+
+<br><br>
+Radio no image button style:
+
+<br><br>
+<button class="circle-nofill" type="submit" value="Submit"></button>
+7
+
+<br><br>
+<button class="circle-fill" type="submit" value="Submit" /></button>
+8
