--- a/React-Refresher-Tutorial/section-6/index-2.html
+++ b/React-Refresher-Tutorial/section-6/index-2.html
@@ -1,17 +1,3 @@
-<!--
-Props
-
-how components talk to each other
-
-Props flow downward
-- parent to child; unidirectional data
-- immutable data (read only)
-
-
-User Input is in state since it's child to parent
-
--->
-
 <!-- INSERT BOILER PLATE CODE -->
 <!DOCTYPE html>
 <html lang="en">
@@ -25,39 +11,37 @@ User Input is in state since it's child to parent
   <script src="https://unpkg.com/react-dom@15.5.4/dist/react-dom.js"></script>
   <!-- BABEL LIBRARY -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.25.0/babel.min.js"></script>
-  <title>Boiler Plate Code</title>
+  <title>Class Components Props</title>
 </head>
 <body>
 
   <!-- DESIGNATED LOCATION TO INSERT REACT CONTENT  -->
-  <div id="app">React has not rendered yet</div>
+  <div id="app">React not rendered</div>
 
   <!-- JAVASCRIPT -->
   <script type="text/babel">
-    var Person = function(props) {
-      return(
-        <h1>Hi, {props.name}</h1>
-      );
+    class PersonGreeting extends React.Component {
+
+      render() {
+
+        var personStyle = {
+          height: 200,
+          width: 200,
+          backgroundColor: this.props.color
+        }
+
+        return(
+          <div style={personStyle}>Hello, {this.props.name}!</div>
+        );
+
+      }
     }
-
-    /*
-
-    <Person name="Midori"> is the same as the object below:
-
-    var props = {
-      name: "Midori"
-    }
-
-    */
-
     ReactDOM.render(
       <div>
-        <Person name="Midori"/>
-        <Person name="Date"/>
-        <Person name="Emerson"/>
-        <Person name="Mivi"/>
-      </div>
-        ,
+        <PersonGreeting color="crimson" name="Midori"/>
+        <PersonGreeting color="grey" name="Nia"/>
+        <PersonGreeting color="darkblue" name="Emerson"/>
+      </div>,
       document.getElementById("app")
     );
   </script>
