--- a/React-Refresher-Tutorial/section-7/index-4.html
+++ b/React-Refresher-Tutorial/section-7/index-4.html
@@ -22,7 +22,7 @@
       var colorItems = props.colors.map(function(color) {
 
         var colorStyle = {
-          marginBottom: 0,
+          margin: '0 0 0 5px',
           height: 50,
           width: 150,
           fontFamily: 'Arial',
