--- a/React-Menu/index.html
+++ b/React-Menu/index.html
@@ -138,9 +138,8 @@
 
 
       render() {
-
         return(
-          <div style={styler}>
+          <div style={styler} id={this.props.id}>
             <img src={this.props.img} alt="food image" style={foodStyle}/>
             <h1>{this.nameVal}</h1>
             <span style={plus} onClick={this.add}>+</span>
@@ -150,16 +149,28 @@
           </div>
         );
       }
+
     }
 
+    var MealSelector = function(props) {
+
+      var bundledMeals = props.meals.map(function(meal) {
+        return <MealSelection key={meal.id} id={meal.id} nameVal={meal.nameVal} img={meal.img}/>
+      });
+
+      return(
+        <div>{bundledMeals}</div>
+      );
+    }
+
+    var meals = [
+                  {id: 1, nameVal: "item-1", img: "./img/lime.png"},
+                  {id: 2, nameVal: "item-2", img: "./img/lime.png"},
+                  {id: 3, nameVal: "item-3", img: "./img/lime.png"}
+                ];
+
     ReactDOM.render(
-
-      <div>
-        <MealSelection id="1" nameVal="item-1" img="./img/lime.png"/>
-        <MealSelection id="2" nameVal="item-2" img="./img/lime.png"/>
-        <MealSelection id="3" nameVal="item-3" img="./img/lime.png"/>
-      </div>,
-
+      <MealSelector meals={meals}/>,
       document.getElementById("app")
     );
 
