--- a/React-Menu/index.html
+++ b/React-Menu/index.html
@@ -43,6 +43,7 @@
       display: "inline-block",
       textAlign: "center",
       margin: 20,
+      borderRadius: '15px',
       height: 400,
       width: 300,
       padding: 0,
@@ -166,7 +167,13 @@
     var meals = [
                   {id: 1, nameVal: "item-1", img: "./img/lime.png"},
                   {id: 2, nameVal: "item-2", img: "./img/lime.png"},
-                  {id: 3, nameVal: "item-3", img: "./img/lime.png"}
+                  {id: 3, nameVal: "item-3", img: "./img/lime.png"},
+                  {id: 4, nameVal: "item-4", img: "./img/lime.png"},
+                  {id: 5, nameVal: "item-5", img: "./img/lime.png"},
+                  {id: 6, nameVal: "item-6", img: "./img/lime.png"},
+                  {id: 7, nameVal: "item-7", img: "./img/lime.png"},
+                  {id: 8, nameVal: "item-8", img: "./img/lime.png"},
+                  {id: 9, nameVal: "item-9", img: "./img/lime.png"}
                 ];
 
     ReactDOM.render(
