--- a/Bootstrap-Design/index.html
+++ b/Bootstrap-Design/index.html
@@ -18,7 +18,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"> <a class="nav-link" href="#1"><i class="fas fa-home"></i><span class="sr-only">(current)</span></a> </li>
+        <li class="nav-item active"> <a class="nav-link" href="#"><i class="fas fa-home"></i><span class="sr-only">(current)</span></a> </li>
         <li class="nav-item"> <a class="nav-link" href="#2"><i class="fas fa-table"></i></a> </li>
         <li class="nav-item"> <a class="nav-link" href="#3"><i class="fas fa-image"></i></a> </li>
         <li class="nav-item"> <a class="nav-link" href="#4"><i class="fas fa-calendar-times"></i></a> </li>
@@ -32,39 +32,61 @@
     </div>
   </nav>
 
+  <div id="1"></div>
 
   <div class="container">
 
-    <div id="1"></div>
     <div style="margin: 10%;"></div>
 
     <h1 class="display-1">Emerson's Corner</h1>
     <p>Just want everyone to know I was here at one point in time typing this.</p>
 
-    <!-- 1 ROW with 5 COLUMNS -->
-    <div class="row align-items-center">
+    <div class="row">
       <div class="col-sm">
-        <h1><a href="#1">1</a></h1>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="img/card.svg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="text-center"><a href="#" class="btn btn-primary">Learn More</a></div>
+          </div>
+        </div>
       </div>
       <div class="col-sm">
-        <h1><a href="#2">2</a></h1>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="img/card.svg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="text-center"><a href="#" class="btn btn-primary">Learn More</a></div>
+          </div>
+        </div>
       </div>
       <div class="col-sm">
-        <h1><a href="#3">3</a></h1>
-      </div>
-      <div class="col-sm">
-        <h1><a href="#4">4</a></h1>
-      </div>
-      <div class="col-sm">
-        <h1><a href="#5">5</a></h1>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="img/card.svg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="text-center"><a href="#" class="btn btn-primary">Learn More</a></div>
+          </div>
+        </div>
       </div>
     </div>
+
 
     <div id="2"></div>
     <div style="margin: 10%;"></div>
 
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb bg-warning">
+        <li class="breadcrumb-item"><a class="text-danger" href="#">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Data</li>
+      </ol>
+    </nav>
+
     <table class="table">
-      <thead class="thead-dark">
+      <thead class="bg-dark text-light">
         <tr>
           <th scope="col">#</th>
           <th scope="col">Language</th>
@@ -93,6 +115,32 @@
         </tr>
       </tbody>
     </table>
+
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+
+        <li class="page-item disabled">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+
+        <li class="page-item active"><a class="page-link bg-warning" href="#">1<span class="sr-only">(current)</span></a></li>
+        <li class="page-item"><a class="page-link text-danger" href="#">2</a></li>
+        <li class="page-item"><a class="page-link text-danger" href="#">3</a></li>
+        <li class="page-item"><a class="page-link text-danger" href="#">4</a></li>
+        <li class="page-item"><a class="page-link text-danger" href="#">5</a></li>
+
+        <li class="page-item">
+          <a class="page-link text-danger"  href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+
+      </ul>
+    </nav>
 
     <div id="3"></div>
     <div style="margin: 10%;"></div>
