--- a/Bootstrap-Design/index.html
+++ b/Bootstrap-Design/index.html
@@ -48,7 +48,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <div class="text-center"><a href="#" class="btn btn-primary">Learn More</a></div>
+            <div class="text-center"><a href="#" class="btn bg-warning text-dark my-2 my-sm-0">Learn More</a></div>
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <div class="text-center"><a href="#" class="btn btn-primary">Learn More</a></div>
+            <div class="text-center"><a href="#" class="btn bg-warning text-dark my-2 my-sm-0">Learn More</a></div>
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <div class="text-center"><a href="#" class="btn btn-primary">Learn More</a></div>
+            <div class="text-center"><a href="#" class="btn bg-warning text-dark my-2 my-sm-0">Learn More</a></div>
           </div>
         </div>
       </div>
@@ -79,7 +79,7 @@
     <div style="margin: 10%;"></div>
 
     <nav aria-label="breadcrumb">
-      <ol class="breadcrumb bg-warning">
+      <ol class="breadcrumb bg-white">
         <li class="breadcrumb-item"><a class="text-danger" href="#">Home</a></li>
         <li class="breadcrumb-item active" aria-current="page">Data</li>
       </ol>
@@ -126,7 +126,7 @@
           </a>
         </li>
 
-        <li class="page-item active"><a class="page-link bg-warning" href="#">1<span class="sr-only">(current)</span></a></li>
+        <li class="page-item active"><a class="page-link bg-warning text-dark" style="border: solid 1px #ccc;" href="#">1<span class="sr-only">(current)</span></a></li>
         <li class="page-item"><a class="page-link text-danger" href="#">2</a></li>
         <li class="page-item"><a class="page-link text-danger" href="#">3</a></li>
         <li class="page-item"><a class="page-link text-danger" href="#">4</a></li>
